Location Change for H2 database for linux.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ logging.level.org.springframework=info
 spring.datasource.username = sa
 spring.datasource.password = 
 
-spring.datasource.url=jdbc:h2:D:\\JAVA_RELATED\\databases\\mytest
+spring.datasource.url=jdbc:h2:/home/h2databases/mytest
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
