--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,13 @@ logging.level.org.springframework=info
 
 #JPA/Database Related
 
-spring.datasource.url=jdbc:h2:/home/h2databases/mytest
+# Username and password
+spring.datasource.username = root
+spring.datasource.password = anu_MYSQL1
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mytest
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.h2.console.enabled=true
