--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ logging.level.org.springframework=info
 spring.datasource.username=root
 spring.datasource.password=anu_MYSQL1
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mytest
+spring.datasource.url=jdbc:mysql://http://45.79.127.19:3306/mytest
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.h2.console.enabled=true
